[gd_scene load_steps=2 format=2]

[ext_resource path="res://Others/CheatConsole/CheatConsole.gd" type="Script" id=1]

[node name="CheatConsole" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 150.0
margin_right = -226.0
margin_bottom = -150.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position" type="Button" parent="."]
margin_left = 16.0
margin_top = 20.0
margin_right = 216.0
margin_bottom = 70.0
text = "Modifier votre Position"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionPopup" type="Popup" parent="."]
margin_left = 250.0
margin_top = 20.0
margin_right = 575.0
margin_bottom = 245.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="PositionPopup"]
margin_right = 325.0
margin_bottom = 225.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Origine" type="Button" parent="PositionPopup"]
pause_mode = 2
margin_left = 10.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 40.0
text = "Revenir en (0,0)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choix" type="Button" parent="PositionPopup"]
pause_mode = 2
margin_left = 10.0
margin_top = 50.0
margin_right = 160.0
margin_bottom = 80.0
text = "Choisir votre Position"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoixEdit" type="LineEdit" parent="PositionPopup"]
margin_left = 165.0
margin_top = 49.0
margin_right = 315.0
margin_bottom = 79.0
placeholder_text = "x : 10.4"
placeholder_alpha = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoixEdit2" type="LineEdit" parent="PositionPopup"]
margin_left = 165.0
margin_top = 80.0
margin_right = 315.0
margin_bottom = 110.0
placeholder_text = "y : -15.2"
placeholder_alpha = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValiderChoix" type="Button" parent="PositionPopup"]
margin_left = 165.0
margin_top = 115.0
margin_right = 315.0
margin_bottom = 145.0
text = "Valider ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scene" type="Button" parent="PositionPopup"]
pause_mode = 2
margin_left = 10.0
margin_top = 90.0
margin_right = 160.0
margin_bottom = 120.0
text = "Changer de Scene"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scenepopup" type="Popup" parent="PositionPopup"]
margin_left = 166.0
margin_right = 317.0
margin_bottom = 225.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="PositionPopup/Scenepopup"]
margin_right = 151.0
margin_bottom = 225.0
color = Color( 0.439216, 0.439216, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartHouse" type="Button" parent="PositionPopup/Scenepopup"]
margin_left = 10.0
margin_right = 140.0
margin_bottom = 20.0
text = "StartHouse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaboChen" type="Button" parent="PositionPopup/Scenepopup"]
margin_left = 10.0
margin_top = 25.0
margin_right = 142.0
margin_bottom = 45.0
text = "Laboratoire Chen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokemonCenterJadielle" type="Button" parent="PositionPopup/Scenepopup"]
margin_left = 10.0
margin_top = 50.0
margin_right = 140.0
margin_bottom = 70.0
text = "Center Jadielle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokemonCenterArgenta" type="Button" parent="PositionPopup/Scenepopup"]
margin_left = 10.0
margin_top = 75.0
margin_right = 140.0
margin_bottom = 95.0
text = "Center Argenta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopJadielle" type="Button" parent="PositionPopup/Scenepopup"]
margin_left = 10.0
margin_top = 100.0
margin_right = 140.0
margin_bottom = 120.0
text = "Shop Jadielle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopArgenta" type="Button" parent="PositionPopup/Scenepopup"]
margin_left = 10.0
margin_top = 125.0
margin_right = 140.0
margin_bottom = 145.0
text = "Shop Argenta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musee" type="Button" parent="PositionPopup/Scenepopup"]
margin_left = 10.0
margin_top = 150.0
margin_right = 140.0
margin_bottom = 170.0
text = "Musee"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForetJade" type="Button" parent="PositionPopup/Scenepopup"]
margin_left = 10.0
margin_top = 175.0
margin_right = 140.0
margin_bottom = 195.0
text = "Foret de Jade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objets" type="Button" parent="."]
margin_left = 16.0
margin_top = 80.0
margin_right = 216.0
margin_bottom = 130.0
text = "Objets"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjetsPopup" type="Popup" parent="."]
visible = true
margin_left = 250.0
margin_top = 20.0
margin_right = 575.0
margin_bottom = 245.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="ObjetsPopup"]
margin_right = 325.0
margin_bottom = 225.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartHouse" type="Button" parent="ObjetsPopup"]
margin_left = 176.0
margin_right = 306.0
margin_bottom = 20.0
text = "StartHouse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaboChen" type="Button" parent="ObjetsPopup"]
margin_left = 176.0
margin_top = 25.0
margin_right = 308.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokemonCenterJadielle" type="Button" parent="ObjetsPopup"]
margin_left = 176.0
margin_top = 50.0
margin_right = 306.0
margin_bottom = 70.0
text = "Center Jadielle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokemonCenterArgenta" type="Button" parent="ObjetsPopup"]
margin_left = 176.0
margin_top = 75.0
margin_right = 306.0
margin_bottom = 95.0
text = "Center Argenta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopJadielle" type="Button" parent="ObjetsPopup"]
margin_left = 176.0
margin_top = 100.0
margin_right = 306.0
margin_bottom = 120.0
text = "Shop Jadielle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopArgenta" type="Button" parent="ObjetsPopup"]
margin_left = 176.0
margin_top = 125.0
margin_right = 306.0
margin_bottom = 145.0
text = "Shop Argenta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musee" type="Button" parent="ObjetsPopup"]
margin_left = 176.0
margin_top = 150.0
margin_right = 306.0
margin_bottom = 170.0
text = "Musee"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForetJade" type="Button" parent="ObjetsPopup"]
margin_left = 176.0
margin_top = 175.0
margin_right = 306.0
margin_bottom = 195.0
text = "Foret de Jade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pokemons" type="Button" parent="."]
margin_left = 16.0
margin_top = 140.0
margin_right = 216.0
margin_bottom = 190.0
text = "Pokemons"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokemonsPopup" type="Popup" parent="."]
margin_left = 250.0
margin_top = 20.0
margin_right = 575.0
margin_bottom = 245.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="PokemonsPopup"]
margin_right = 325.0
margin_bottom = 225.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Argent" type="Button" parent="."]
margin_left = 16.0
margin_top = 200.0
margin_right = 216.0
margin_bottom = 250.0
text = "Ajouter de l'Argent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArgentPopup" type="Popup" parent="."]
margin_left = 250.0
margin_top = 20.0
margin_right = 575.0
margin_bottom = 245.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="ArgentPopup"]
margin_right = 325.0
margin_bottom = 225.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Position" to="." method="_on_Position_pressed"]
[connection signal="pressed" from="PositionPopup/Origine" to="." method="_on_Origine_pressed"]
[connection signal="pressed" from="PositionPopup/Choix" to="." method="_on_Choix_pressed"]
[connection signal="text_changed" from="PositionPopup/ChoixEdit" to="." method="_on_ChoixEdit_text_changed"]
[connection signal="text_changed" from="PositionPopup/ChoixEdit2" to="." method="_on_ChoixEdit2_text_changed"]
[connection signal="pressed" from="PositionPopup/ValiderChoix" to="." method="_on_ValiderChoix_pressed"]
[connection signal="pressed" from="PositionPopup/Scene" to="." method="_on_Scene_pressed"]
[connection signal="pressed" from="PositionPopup/Scenepopup/StartHouse" to="." method="_on_StartHouse_pressed"]
[connection signal="pressed" from="PositionPopup/Scenepopup/LaboChen" to="." method="_on_LaboChen_pressed"]
[connection signal="pressed" from="PositionPopup/Scenepopup/PokemonCenterJadielle" to="." method="_on_PokemonCenterJadielle_pressed"]
[connection signal="pressed" from="PositionPopup/Scenepopup/PokemonCenterArgenta" to="." method="_on_PokemonCenterArgenta_pressed"]
[connection signal="pressed" from="PositionPopup/Scenepopup/ShopJadielle" to="." method="_on_ShopJadielle_pressed"]
[connection signal="pressed" from="PositionPopup/Scenepopup/ShopArgenta" to="." method="_on_ShopArgenta_pressed"]
[connection signal="pressed" from="PositionPopup/Scenepopup/Musee" to="." method="_on_Musee_pressed"]
[connection signal="pressed" from="PositionPopup/Scenepopup/ForetJade" to="." method="_on_ForetJade_pressed"]
